--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -29,6 +29,20 @@
   background-size: 32px 32px;
 }
 
+.cf-logo-image-efolder {
+  background-image: url(asset-path('caseflow-efolder-logo.svg'));
+  width: 32px;
+  height: 32px;
+  background-size: 32px 32px;
+}
+
+.cf-logo-image-feedback {
+  background-image: url(asset-path('caseflow-feedback-logo.svg'));
+  width: 32px;
+  height: 32px;
+  background-size: 32px 32px;
+}
+
 .cf-stats {
   margin-top: 0;
 
