--- a/app/assets/stylesheets/react/_comment.scss
+++ b/app/assets/stylesheets/react/_comment.scss
@@ -7,6 +7,12 @@
   padding: 3px 0;
 }
 
+.comment-save-button-container {
+  display: inline-block;
+  width: 100%;
+  margin: 5px 0 20px 0;
+}
+
 .comment-control-button {
   padding: 0;
 }
