--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,8 @@
   <%= stylesheet_link_tag    'application', media: 'all' %>
 
     <%= env_javascript_include_tag(static: 'application',
-                                   hot: ['http://localhost:3500/webpack-bundle.js']) %>
+                                   hot: ['application',
+                                         'http://localhost:3500/webpack-bundle.js']) %>
 
   <%= csrf_meta_tags %>
 
