--- a/app/assets/stylesheets/react/_comment.scss
+++ b/app/assets/stylesheets/react/_comment.scss
@@ -10,7 +10,8 @@
 .comment-save-button-container {
   display: inline-block;
   width: 100%;
-  margin: 5px 0 17px 0;
+  margin-top: 5px;
+  margin-bottom: 17px;
 }
 
 .comment-control-button {
