--- a/app/assets/stylesheets/react/_select-dropdown.scss
+++ b/app/assets/stylesheets/react/_select-dropdown.scss
@@ -8,6 +8,9 @@
  *
  * This css has been modified to match the searchable select dropdown for caseflow.
 */
+@import 'uswds/lib/addons/font-stacks';
+@import 'uswds/core/variables';
+
 .Select {
   position: relative;
   max-width: 46rem;
@@ -42,7 +45,7 @@
   background-position: right 1.3rem center;
   background-repeat: no-repeat;
   background-size: 1.3rem;
-  border-left: 1px solid #5b616b;
+  border-left: 1px solid $color-gray;
   padding-left: 32px;
 }
 
@@ -340,7 +343,7 @@
 }
 
 .Select--multi .Select-value {
-  background-color: #d6d7d9;
+  background-color: $color-gray-lighter;
   padding: 0px 4px;
   border-radius: 3px;
   color: black;
