--- a/app/assets/stylesheets/react/_comment.scss
+++ b/app/assets/stylesheets/react/_comment.scss
@@ -2,9 +2,10 @@
 @import 'uswds/core/variables';
 
 .comment-control-button-container {
-  display: inline-block;
+  display: flex;
   width: 100%;
   padding: 3px 0;
+  justify-content: space-between;
 }
 
 .comment-save-button-container {
