Create Quota class. Make it auto update if more users complete tasks.
connects #1691

- Integration and unit tests.
- This will cause the quota to be set to 1 on the day we deploy. I will take care of correcting this personally. Wasn't worth adding the code to mitigate that little hiccup.

- Remove double negation Rubocop rule (connects #1592)
- Refactor & test existing quota logic (connects #1069)

--- a/app/views/establish_claims/manager_index.html.erb
+++ b/app/views/establish_claims/manager_index.html.erb
@@ -2,6 +2,6 @@
   page: "TasksManagerIndex",
   toCompleteCount: @to_complete_count,
   completedCountToday: @completed_count_today,
-  employeeCount: Rails.cache.read('employee_count') || '0',
+  employeeCount: quota.assignee_count,
   tasksCompletedByUsers: @tasks_completed_by_users
 }) %>
