--- a/app/assets/stylesheets/_style_guide.scss
+++ b/app/assets/stylesheets/_style_guide.scss
@@ -146,3 +146,35 @@ pre {
     }
   }
 }
+
+.sg-colors-swatches {
+  overflow: auto;
+
+  .sg-colors-swatch {
+    float: left;
+    margin-bottom: 20px;
+
+    div {
+      width: 110px;
+      height: 110px;
+      box-shadow: 1px 1px 5px $color-gray-medium;
+      margin-top: 10px;
+      margin-right: 25px;
+      margin-bottom: 15px;
+      position: relative;
+      left: 2px;
+    }
+
+    span {
+      display: block;
+      font-size: 75%;
+    }
+  }
+}
+
+.sg-colors-combo {
+  border: 1px solid $color-gray;
+  padding: .75rem;
+  margin-bottom: 10px;
+  width: 50%;
+}
