adding tags to reader (#1661)
* Initial structure

* Building out category picker structure more

* Start of redux integration but it does not fully work yet

* Getting more redux integration in place

* Fixing styles so all buttons can be clicked and fixing reducer

* Getting icons to show up

* Fixing styling

* Adding doc category icons to pdf list view

* Fix issue where boxes were not being checked properly

* cleanup

* Ensuring that icons always display in the same order

* Updating spacing to match the spec

* Removing DocumentLabels in favor of DocumentCategories

* removing unnecessary class

* Make error handling a little more useful

* document -> documents

* extract connect functions

* use RenderFunctions instead of svgs

* fix scss lint errors

* Start of work to persist changes on backend, although more needs to be done

* Adding data to generators

* Updating to receive values from the server

* Hooking up to redux store more

* Making persisting to the server actually work

* Fix lint error

* Pulling in npm-shrinkwrap from master and messing around with tests

* Fixing up tests

* Adding more tests

* Fixing up tests

* fix to_hash

* Adding a feature test

* Fixing rubocop errors

* Fine, add safe_click_on back in

* Adding new Creatable Searachble dropdown

* Removing some scss comments

* Removing console log

* Updating no results msg constant

* Refactoring options being passed in

* Changing some css

* shortening a line

* Fixing linting issues

* Adding some comments

* More lint issues

* Adding tags model, updated document generator, updated ui

* Updating select dropdown styling

* Updating tag names in generator

* Adding tags controller

* Adding actions to reader with other changes related to tags

* Adding redux-thunk

* Keeping track of the current viewing pdf in redux store

* Updating action names

* Adding tags save failure err

--- a/app/assets/stylesheets/react/_select-dropdown.scss
+++ b/app/assets/stylesheets/react/_select-dropdown.scss
@@ -8,6 +8,9 @@
  *
  * This css has been modified to match the searchable select dropdown for caseflow.
 */
+@import 'uswds/lib/addons/font-stacks';
+@import 'uswds/core/variables';
+
 .Select {
   position: relative;
   max-width: 46rem;
@@ -42,6 +45,8 @@
   background-position: right 1.3rem center;
   background-repeat: no-repeat;
   background-size: 1.3rem;
+  border-left: 1px solid $color-gray;
+  padding-left: 32px;
 }
 
 .Select-control {
@@ -227,7 +232,6 @@
 .Select-arrow-zone {
   cursor: pointer;
   display: table-cell;
-  position: relative;
   text-align: center;
   vertical-align: middle;
   width: 30px;
@@ -241,6 +245,7 @@
 
 .Select--multi .Select-multi-value-wrapper {
   display: inline-block;
+  padding-bottom: 5px;
 }
 
 .Select .Select-aria-only {
@@ -338,14 +343,10 @@
 }
 
 .Select--multi .Select-value {
-  background-color: #ebf5ff;
-  /* Fallback color for IE 8 */
-  background-color: rgba(0, 126, 255, 0.08);
-  border-radius: 2px;
-  border: 1px solid #c2e0ff;
-  /* Fallback color for IE 8 */
-  border: 1px solid rgba(0, 126, 255, 0.24);
-  color: #007eff;
+  background-color: $color-gray-lighter;
+  padding: 0px 4px;
+  border-radius: 3px;
+  color: black;
   display: inline-block;
   font-size: 0.9em;
   line-height: 1.4;
@@ -364,7 +365,7 @@
   border-bottom-right-radius: 2px;
   border-top-right-radius: 2px;
   cursor: default;
-  padding: 2px 5px;
+  padding: 5px 5px;
 }
 
 .Select--multi a.Select-value-label {
@@ -378,21 +379,14 @@
 }
 
 .Select--multi .Select-value-icon {
+  font-size: 20px;
+  font-weight: 900;
+  text-decoration: bold;
+  float: right;
   cursor: pointer;
   border-bottom-left-radius: 2px;
   border-top-left-radius: 2px;
-  border-right: 1px solid #c2e0ff;
-  /* Fallback color for IE 8 */
-  border-right: 1px solid rgba(0, 126, 255, 0.24);
-  padding: 1px 5px 3px;
-}
-
-.Select--multi .Select-value-icon:hover,
-.Select--multi .Select-value-icon:focus {
-  background-color: #d8eafd;
-  /* Fallback color for IE 8 */
-  background-color: rgba(0, 113, 230, 0.08);
-  color: #0071e6;
+  padding: 2px 5px 3px;
 }
 
 .Select--multi .Select-value-icon:active {
