--- a/app/assets/stylesheets/_style_guide.scss
+++ b/app/assets/stylesheets/_style_guide.scss
@@ -153,21 +153,30 @@ pre {
   .sg-colors-swatch {
     float: left;
     margin-bottom: 20px;
+    margin-right: 25px;
 
     div {
       width: 110px;
       height: 110px;
       box-shadow: 1px 1px 5px $color-gray-medium;
       margin-top: 10px;
-      margin-right: 25px;
       margin-bottom: 15px;
       position: relative;
       left: 2px;
     }
 
-    span {
-      display: block;
+    b,
+    p {
       font-size: 75%;
+    }
+
+    p {
+      margin: 0;
+      padding: 0;
+
+      &:nth-of-type(2) {
+        font-size: 55%;
+      }
     }
   }
 }
