--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -171,7 +171,7 @@
 .cf-success-checklist {
   position: relative;
   width: 50%;
-  margin: 50px 0 65px 225px;
+  margin: 50px 0 65px 25%;
   list-style-type: none;
 
   li {
