--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -114,6 +114,7 @@ svg[aria-hidden=true],
 .cf-comment-wrapper {
   padding: 0 30px;
   width: 380px;
+  margin-top: 15px;
   overflow-y: scroll;
 }
 
