--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -170,13 +170,14 @@
 // add to commons
 .cf-success-checklist {
   position: relative;
-  width: 50%;
+  max-width: 400px;
   margin: 50px 0 65px 25%;
   list-style-type: none;
 
   li {
     background: url('icons/icon-check.svg') no-repeat left top transparent;
     background-size: 22px 17px;
+    background-position-y: 7px;
     padding-left: 38px;
     padding-top: 3px;
   }
