--- a/app/views/certifications/confirm.html.erb
+++ b/app/views/certifications/confirm.html.erb
@@ -4,9 +4,9 @@
   <h1 class="cf-success cf-msg-screen-heading">Congratulations!</h1>
   <h2 class="cf-msg-screen-deck"><%= appeal.veteran_full_name %>'s case [<%= appeal.vbms_id%>] has been certified.</h2>
 
-  <ul class="cf-checklist">
-      <li><span class="cf-icon-success--bg"></span> Verified documents were in eFolder</li>
-      <li><span class="cf-icon-success--bg cf-success"></span> Completed and uploaded Form 8</li>
+  <ul class="cf-success-checklist cf-left-padding">
+      <li>Verified documents were in eFolder</li>
+      <li>Completed and uploaded Form 8</li>
   </ul>
 
   <p class="cf-msg-screen-text">Way to go! You can now close this window and open another appeal in VACOLS.</p>
