--- a/app/assets/stylesheets/_style_guide.scss
+++ b/app/assets/stylesheets/_style_guide.scss
@@ -147,6 +147,14 @@ pre {
   }
 }
 
+.cf-sg-subsection {
+  margin-bottom: 30px;
+}
+
+.cf-sg-success-example {
+  margin-left: 125px;
+}
+
 .sg-colors-swatches {
   overflow: auto;
 
@@ -187,4 +195,3 @@ pre {
   margin-bottom: 10px;
   width: 50%;
 }
-
