--- a/app/assets/stylesheets/react/_comment.scss
+++ b/app/assets/stylesheets/react/_comment.scss
@@ -24,7 +24,7 @@
 }
 
 .comment-container-selected {
-  box-shadow: 0 0 10px $color-focus;
+  box-shadow: 3px 3px 5px $color-gray-light;
 }
 
 .comment-container {
