Modified help links

--- a/app/views/help/show.html.erb
+++ b/app/views/help/show.html.erb
@@ -4,8 +4,8 @@
   <h1>Caseflow Help</h1>
 
   <ul id="toc" class="usa-unstyled-list">
-    <li><a href="/certification/help">Certification</a></li>
-    <li><a href="/dispatch/help">Dispatch</a></li>
+    <li><a href="/certification/help">Certification Help</a></li>
+    <li><a href="/dispatch/help">Dispatch Help</a></li>
   </ul>
 </div>
 
