--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,11 @@
   <% end %>
 
   <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= javascript_include_tag 'application' %>
+
+    <%= env_javascript_include_tag(static: 'application',
+                                   hot: ['application',
+                                         'http://localhost:3500/webpack-bundle.js']) %>
+
   <%= csrf_meta_tags %>
 
   <% if content_for?(:head) %><%= yield :head %><% end %>
