--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -49,13 +49,12 @@ $bookmark-yellow: #efdf1a;
 .cf-pdf-scroll-view {
   background-color: $color-gray;
   width: 100%;
-  top: 0;
-  bottom: 0;
+  top: 50px;
+  bottom: 50px;
   position: absolute;
   overflow-y: scroll;
   overflow-x: visible;
   text-align: center;
-  padding: 30px 0;
   float: left;
 }
 
