--- a/app/views/establish_claims/complete.html.erb
+++ b/app/views/establish_claims/complete.html.erb
@@ -9,8 +9,8 @@
     checklist: task.actions_taken,
     firstHeader: "Success!",
     page: "EstablishClaimComplete",
-    totalCasesCompleted: user_completed_today,
-    employeeCount: Rails.cache.read('employee_count') || '0',
+    totalCasesCompleted: user_quota.tasks_completed_count,
+    employeeCount: team_quota.user_count || '0',
     totalCasesToComplete: to_complete_count,
     secondHeader: second_header
 }) %>
