--- a/app/assets/stylesheets/reader/_document_list.scss
+++ b/app/assets/stylesheets/reader/_document_list.scss
@@ -35,13 +35,19 @@ $tag-backgrond-color: #d6d7d9;
     margin: 3px;
   }
 
-  .document-list-issue-tag {
-    display: inline-block;
-    background: $tag-backgrond-color;
-    border-radius: 3px;
-    padding: 2px 5px;
-    text-align: center;
-    margin: 3px;
+  .document-list-issue-tags {
+    max-width: 225px;
+    
+    .document-list-issue-tag {
+      display: inline-block;
+      background: $tag-backgrond-color;
+      border-radius: 3px;
+      padding: 4px 7px;
+      text-align: center;
+      margin: 3px;
+      max-width: 225px;
+      word-wrap: break-word;
+    }
   }
 
   .cf-dropdown-filter {
