--- a/app/views/establish_claims/assigned_existing_ep.html.erb
+++ b/app/views/establish_claims/assigned_existing_ep.html.erb
@@ -6,7 +6,7 @@
     firstHeader: 'Congratulations!',
     page: 'EstablishClaimComplete',
     totalCasesCompleted: user_quota.tasks_completed_count,
-    employeeCount: team_quota.user_count || '0',
+    employeeCount: team_quota.user_count,
     totalCasesToComplete: to_complete_count,
     secondHeader: task.appeal.veteran_full_name + "'s claim (" + task.appeal.sanitized_vbms_id + ') has been assigned an EP.'
 }) %>
