--- a/app/views/establish_claims/complete.html.erb
+++ b/app/views/establish_claims/complete.html.erb
@@ -10,7 +10,7 @@
     firstHeader: "Success!",
     page: "EstablishClaimComplete",
     totalCasesCompleted: user_quota.tasks_completed_count,
-    employeeCount: team_quota.user_count || '0',
+    employeeCount: team_quota.user_count,
     totalCasesToComplete: to_complete_count,
     secondHeader: second_header
 }) %>
