Adding filtering/searching for categories (#1782)
* Adding alert when filtering

* Adding searching

* Adding search

* Adding searching for tags

* Adding tests

* Addressing comments

* Adding missing file

* Accessability

--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -171,7 +171,7 @@ svg[aria-hidden=true],
 
 // TODO: Remove !important
 [type="button"].cf-pdf-button {
-  margin: 0 8px !important;
+  margin: 0 8px;
   color: inherit;
   padding: 0;
   background-color: transparent;
@@ -392,4 +392,16 @@ svg[aria-hidden=true],
   * {
     cursor: url(asset-path('comment-cursor.svg')), auto !important;
   }
+}
+
+// scss-lint:disable QualifyingElement
+input[type="search"].cf-search-input-with-close {
+  padding-right: 25px;
+}
+// scss-lint:enable QualifyingElement
+
+[type="button"].cf-search-close-icon {
+  margin-left: -20px;
+  margin-top: 6px;
+  position: absolute;
 }
