--- a/app/assets/stylesheets/reader/_document_list.scss
+++ b/app/assets/stylesheets/reader/_document_list.scss
@@ -85,6 +85,22 @@ $tag-backgrond-color: #d6d7d9;
       }
     }
 
+    .cf-document-tag-picker {
+      padding-bottom: 0;
+      margin-top: 0;
+
+      .cf-category-selector {
+        display: flex;
+        align-items: flex-start;
+        margin: .5em;
+
+        .cf-form-checkboxes {
+          margin-top: 0;
+          margin-bottom: 0;
+        }
+      }
+    }
+
     .cf-document-category-picker {
       margin-bottom: 0;
       margin-top: 0;
@@ -159,7 +175,7 @@ $tag-backgrond-color: #d6d7d9;
     }
   }
 
-  .cf-document-category-picker {
+  .cf-document-filter-picker {
     list-style-type: none;
     padding-left: 0;
     padding-bottom: 5px;
