--- a/app/assets/stylesheets/reader/_document_list.scss
+++ b/app/assets/stylesheets/reader/_document_list.scss
@@ -87,7 +87,9 @@ $tag-backgrond-color: #d6d7d9;
 
     .cf-document-tag-picker {
       padding-bottom: 0;
-      margin-top: 0;
+      margin: 0;
+      max-height: 325px;
+      overflow: scroll;
 
       .cf-category-selector {
         display: flex;
