--- a/app/views/establish_claims/canceled.html.erb
+++ b/app/views/establish_claims/canceled.html.erb
@@ -3,9 +3,9 @@
 <%= react_component("BaseContainer", props: {
   availableTasks: tasks.any_assignable_to?(current_user),
   buttonText: start_text,
-  employeeCount: Rails.cache.read('employee_count') || '0',
+  employeeCount: team_quota.user_count,
   page: "EstablishClaimCancel",
   secondHeader: "We’ve recorded your explanation for halting the routing of claim " + task.appeal.sanitized_vbms_id + ". It has been removed from the queue and must now be processed outside of Caseflow Dispatch.",
-  totalCasesCompleted: user_completed_today,
+  totalCasesCompleted: user_quota.tasks_completed_count,
   totalCasesToComplete: to_complete_count
 }) %>
