Status and Alert components (#1755)
* more styles yay

* add regular code for success messages

* add success message component and implement that across all react apps

* add styles for success page bullets

* more styles for the success checklist

* add new status message

* add new status page

* change margin right to percentage

* add status message component

* convert subsection to issubsection

* add alerts

* add alert messages component

* refine alerts

* fix rake lint things

* remove long line rules

* status page refactoring

--- a/app/views/errors/500.html.erb
+++ b/app/views/errors/500.html.erb
@@ -1,7 +1,7 @@
 <% content_for :page_title do certification_header("Error 500") end %>
 
 <div class="cf-txt-c cf-app-segment cf-app-segment--alt">
-  <h1 class="cf-error cf-msg-screen-heading"><% if @error_title %><%= @error_title %><% else %>Something went wrong.<% end %></h1>
+  <h1 class="cf-red-text cf-msg-screen-heading"><% if @error_title %><%= @error_title %><% else %>Something went wrong.<% end %></h1>
   <% if @error_subtitle %>
   <h2 class="cf-msg-screen-deck"><%=@error_subtitle%></h2>
   <% end %>
