added a scss rule to success message

--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -345,3 +345,9 @@ select {
 .cf-icon-button {
   cursor: pointer;
 }
+
+.cf-msg-screen-deck {
+  &.cf-success-emoji-text {
+    width: auto;
+  }
+}
