preventing min-widths from breaking comments

--- a/app/assets/stylesheets/reader/_document_list.scss
+++ b/app/assets/stylesheets/reader/_document_list.scss
@@ -19,7 +19,7 @@ $tag-backgrond-color: #d6d7d9;
     max-width: 85vw;
     min-width: 925px;
 
-    .usa-grid-full {
+    .usa-grid-full.document-list-header {
       max-width: 85vw;
       min-width: 925px;
     }
