--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -186,6 +186,10 @@
 
 .cf-msg-screen-deck {
   margin-bottom: 4rem !important;
+
+  &.cf-success-emoji-text {
+    width: auto;
+  }
 }
 
 .cf-tab-window-body {
@@ -263,6 +267,8 @@ select {
 
 .cf-left-padding {
   padding-left: 75px;
+  margin-top: 20px;
+  margin-bottom: 30px;
 }
 
 .cf-push-left {
