Main menu Help link goes to app-specific help (#1786)
* Main menu Help link goes to app-specific help

* Copied contents of help/show.html.erb to certification.html.erb
* help/show.html.erb is now Help index page
* Root goes to Help index page

Connects #1435

* Fixed help spec

* Replaced help/show.html.erb with index

* Tweaked help_path(); dispatch admin controller sets app

--- a/app/views/help/certification.html.erb
+++ b/app/views/help/certification.html.erb
@@ -1,4 +1,4 @@
-<% content_for :page_title do %>&nbsp &gt &nbspHelp<% end %>
+<% content_for :page_title do %>&nbsp &#124 &nbspCertification Help<% end %>
 
 <div class="cf-app-segment cf-app-segment--alt cf-help-content">
   <h1>Caseflow Certification Help</h1>
