--- a/app/assets/stylesheets/_style_guide.scss
+++ b/app/assets/stylesheets/_style_guide.scss
@@ -39,7 +39,7 @@ div {
 }
 
 .cf-sg-content {
-  width: 78%;
+  padding-left: 190px;
 }
 
 .usa-accordion {
@@ -194,4 +194,14 @@ pre {
   padding: .75rem;
   margin-bottom: 10px;
   width: 50%;
+}
+
+.cf-sg-section-source {
+  overflow: auto;
+  margin: 1.5rem auto;
+
+  h2,
+  h3 {
+    margin-bottom: 0;
+  }
 }
