--- a/app/views/dispatch_stats/show.html.erb
+++ b/app/views/dispatch_stats/show.html.erb
@@ -13,6 +13,7 @@
 <% end %>
 
 <div class="cf-app-segment cf-app-segment--alt">
+  <h1>Dispatch Dashboard</h1>
   <div class="cf-stats">
     <ul class="cf-tab-navigation">
       <% DispatchStats::INTERVALS.each do |interval| %>
@@ -27,7 +28,7 @@
     </ul>
 
     <div class="cf-stats-section -activity">
-      <h3>Establish Claim Tasks Identified <span class="data-date"></span></h3>
+      <h4>Establish Claim Tasks Identified <span class="data-date"></span></h4>
 
       <div class="cf-stat-panel data-chart" data-key="establish_claim_identified">
         <h4 class="cf-stat-title">
@@ -57,7 +58,7 @@
 
 
     <div class="cf-stats-section -activity">
-      <h3>Establish Claim Task Activity <span class="data-date"></span></h3>
+      <h4>Establish Claim Task Activity <span class="data-date"></span></h4>
 
       <div class="cf-stat-panel data-chart" data-key="establish_claim_active_users">
         <h4 class="cf-stat-title">
@@ -86,7 +87,7 @@
     </div>
 
     <div class="cf-stats-section -certification">
-      <h3>Establish Claim Task Completion Rate <span class="data-date"></span></h3>
+      <h4>Establish Claim Task Completion Rate <span class="data-date"></span></h4>
 
       <div class="cf-stat-panel data-chart" data-key="establish_claim_completed_success/establish_claim_completed">
         <h4 class="cf-stat-title">
@@ -115,7 +116,7 @@
     </div>
 
     <div class="cf-stats-section -timing">
-      <h3>Time to Claim Establishment <span class="data-date"></span></h3>
+      <h4>Time to Claim Establishment <span class="data-date"></span></h4>
 
       <div class="cf-stat-panel -toggle"
            role="button" tabindex="0"
@@ -180,7 +181,7 @@
     </div>
 
     <div class="cf-stats-section -missing">
-      <h3>Establish Claim Tasks Canceled <span class="data-date"></span></h3>
+      <h4>Establish Claim Tasks Canceled <span class="data-date"></span></h4>
 
       <div class="cf-stat-panel data-chart" data-key="establish_claim_canceled">
         <h4 class="cf-stat-title">
