--- a/app/views/dispatch_stats/show.html.erb
+++ b/app/views/dispatch_stats/show.html.erb
@@ -1,4 +1,4 @@
-<% content_for :page_title do %>&nbsp &gt &nbspDispatch Dashboard<% end %>
+<% content_for :page_title do stats_header end %>
 
 <% content_for :head do %>
     <%= javascript_include_tag 'stats' %>
