Fixing icon placement on alert

--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -313,6 +313,10 @@ select {
   }
 }
 
+.usa-alert.no-title {
+  background-position: 1rem 1.5rem;
+}
+
 // caseflow-commons
 .cf-secondary-disabled {
   opacity: .25;
